# falcon_ai

./: .env.example  .gitignore  3d.css  3d.html  3d.js  admin.css  admin.html  admin.js  app.py  avatar_manager.py  browser_avatar.js  dashboard.css  dashboard.html  database.py  descriptive.css  descriptive.html  descriptive.js  emotional.css  emotional.html  emotional.js  exam-report.css  exam-report.html  exam.css  exam.html  exam.js  explainer.css  explainer.html  extractor.py  falcon.sql  hello.txt  index.html  kokoro.md  mcq.css  mcq.html  mcq.js  practice-report.css  practice-report.html  practice.css  practice.html  practice.js  (+15 more)
.agents/maps/: SKILL.md
maps/: map.md
maps/references/: 3d-css.md  3d-html.md  3d-js.md  admin-css.md  admin-html.md  admin-js.md  app-py.md  avatar-manager-py.md  base-py.md  browser-avatar-js.md  browser-fallback-py.md  comfyui-provider-py.md  dashboard-css.md  dashboard-html.md  database-py.md  descriptive-css.md  descriptive-html.md  descriptive-js.md  emotional-css.md  emotional-html.md  emotional-js.md  exam-css.md  exam-html.md  exam-js.md  exam-report-css.md  exam-report-html.md  explainer-css.md  explainer-html.md  extractor-py.md  falcon-sql.md  gitignore-md.md  huggingface-provider-py.md  identity-provider-py.md  index-html.md  init-py.md  local-provider-py.md  mcq-css.md  mcq-html.md  mcq-js.md  practice-css.md  (+19 more)
providers/: __init__.py  base.py  browser_fallback.py  comfyui_provider.py  huggingface_provider.py  identity_provider.py  local_provider.py
uploads/: 1.0_STRUCTURE_OF_DNA_1.pptx  10._0_GENE_EXPRESSION_REGULATION_2.pptx  pdf
