[project]
name = "falcon-ai-backend"
version = "0.1.0"
description = "Falcon AI Backend - Emotional support assistant and teaching platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Falcon AI Team"}
]
keywords = ["ai", "flask", "backend", "education", "mental-health"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=2.0",
    "flask-cors>=4.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "reportlab>=4.0",
    "PyPDF2>=3.0",
    "textblob>=0.17",
    "psycopg2-binary>=2.9",
    "python-bidi>=0.4",
    "arabic-reshaper>=3.0",
    "pillow>=10.0",
    "werkzeug>=2.0",
    "vosk>=0.3.45",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
avatar = [
    "torch>=2.0",
    "diffusers>=0.25",
    "transformers>=4.35",
    "accelerate>=0.25",
    "insightface>=0.7",
    "opencv-python>=4.8",
    "websocket-client>=1.6",
]
ocr = [
    "pytesseract>=0.3",
    "pdf2image>=1.17",
    "python-docx>=0.8",
    "python-pptx>=0.6",
]

[project.urls]
Homepage = "https://github.com/falcon-ai/backend"
Repository = "https://github.com/falcon-ai/backend"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]